--- a/angular.json
+++ b/angular.json
@@ -52,13 +52,7 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all",
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/auth/auth-config.ts",
-                  "with": "src/environments/auth/auth-config.prod.ts"
-                }
-              ]
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
