--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ngx-skeleton-loader": "^8.1.0",
     "prettier": "^3.1.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.3",
     "tslib": "^2.3.0",
     "webpack-cli": "^5.1.4",
     "xlsx": "^0.18.5",
