upadte angular.json build prod

--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,11 @@
           },
           "configurations": {
             "production": {
+              "sourceMap": true,
+              "optimization": true,
+              "aot": true,
+              "namedChunks": false,
+              "progress": true,
               "budgets": [
                 {
                   "type": "initial",
